# wmaker

./: Makefile.am  README  configure.ac
WPrefs.app/: Configurations.c  Effects.c  EffectsCompositor.c  EffectsInternal.h  EffectsLayout.c  EffectsSettings.c  Expert.c  Icons.c  Makefile.am  WPrefs.c  WPrefs.h  WindowHandling.c
WindowMaker/: Makefile.am
WindowMaker/Compositors/: compiz.conf  compton.conf  picom.conf
doc/: BUILDING_ON_DEBIAN_UBUNTU.md  BUILDING_ON_PCLINUXOS_ALT.md  GLASS_AND_MODERN_UI_NOTES.md  GLASS_AND_SONOMA_UI_NOTES.md  GLASS_UI_NOTES.md  GS_DESKTOP_POLISHING.md  LIBRARIES.md  Makefile.am  REDESIGN_PREVIEW.md  RUNNING_WMAKER.md  SONOMA_UI_NOTES.md  WINGS_APP_WORKFLOW.md
script/: check-compositor-integration.sh  check-startup-compositor-signature.sh
src/: Makefile.am  WindowMaker.h  actions.c  compositor.c  compositor.h  defaults.c  dock.c  dock.h  icon.c  misc.c  misc.h  moveres.c  screen.c  startup.c  wconfig.h.in  wdefaults.c  window.c  window.h
test/: Makefile.am
util/: Makefile.am
wrlib/: Makefile.am  effects.c  scale.c  wraster.h.in
